--- a/app/locales/ar.json
+++ b/app/locales/ar.json
@@ -9,7 +9,7 @@
     "createAccount": "أنشئ حساباً"
   },
   "navigation": {
-    "title": "DevAcademy",
+    "title": "Barmajah Academy",
     "program": "البرنامج",
     "pricing": "الأسعار",
     "contact": "اتصل بنا",
