--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -9,7 +9,7 @@
     "createAccount": "Create one"
   },
   "navigation": {
-    "title": "DevAcademy",
+    "title": "Barmajah Academy",
     "program": "Program",
     "pricing": "Pricing",
     "contact": "Contact",
