--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -37,7 +37,7 @@
     }
   },
   "navigation": {
-    "title": "DevAcademy",
+    "title": "Barmajah Academy",
     "program": "Programme",
     "pricing": "Tarifs",
     "contact": "Contact",
