--- a/app/locales/ar.json
+++ b/app/locales/ar.json
@@ -416,6 +416,14 @@
     "resendButton": "إعادة إرسال بريد التحقق",
     "backToSignIn": "الرجوع إلى تسجيل الدخول",
     "checkSpam": "إذا لم تجد البريد، يرجى التحقق من مجلد الرسائل المزعجة.",
-    "contactSupport": "اتصل بالدعم"
+    "contactSupport": "اتصل بالدعم",
+    "successTitle": "تم التحقق من البريد الإلكتروني",
+    "successDescription": "تم التحقق من بريدك الإلكتروني بنجاح. يمكنك الآن تسجيل الدخول إلى حسابك.",
+    "goToSignIn": "انتقل إلى تسجيل الدخول"
+  },
+  "confirmation": {
+    "title": "تم إرسال رسالتك بنجاح",
+    "subtitle": "شكرًا على رسالتك. سنرد عليك في أقرب وقت ممكن.",
+    "button": "العودة إلى الصفحة الرئيسية"
   }
 }
