--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -418,6 +418,14 @@
     "resendButton": "Resend Verification Email",
     "backToSignIn": "Back to Sign In",
     "checkSpam": "If you don't see the email, please check your spam folder.",
-    "contactSupport": "Contact Support"
+    "contactSupport": "Contact Support",
+    "successTitle": "Email Verified",
+    "successDescription": "Your email has been successfully verified. You can now sign in to your account.",
+    "goToSignIn": "Go to Sign In"
+  },
+  "confirmation": {
+    "title": "Your message has been sent!",
+    "subtitle": "Thank you for reaching out to us. We will get back to you as soon as possible.",
+    "button": "Go to Home"
   }
 }
